src/test/deca/context/valid/call_superclass_method.deca
/*
    Description : Appel d'une méthode de la superclasse

    Résultat : OK
*/
class A{
    boolean x(){
        return true;
    }
}
class B extends A{
    boolean b = x();
}
