src/test/deca/context/invalid/if_new_boolean.deca
/*
    Description : Utilisation d'une instantiation de booléen au sein d'un if

    Résultat: Erreur contextuelle / double erreur (deca:14:12)
*/
class A
{
    int x = 2;
    void t(){
        if (new boolean()){
            x = 2;
        }
    }
}
